--- a/style/index.css
+++ b/style/index.css
@@ -1,16 +1,17 @@
 body{
-    background-color: teal;
+    background-color: rgb(0, 92, 128);
     text-align: center;
 }
 
 .hi{
-    font-size: 50px;
+    font-size: 80px;
+    font-family: 'Birthstone', cursive;
 }
 
 .cont{
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .button{
@@ -27,6 +28,8 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 1px;
+    font-family: 'Birthstone', cursive;
+    font-size: 25px;
 }
 
 .input-form{
@@ -36,7 +39,9 @@ body{
 
 .delButton:hover, .addButton:hover{
     cursor: pointer;
-    background-color: blue;
+    background-color: rgb(105, 1, 1);
+    color: white;
+    font-family: 'Birthstone', cursive;
 }
 
 .tasks{
@@ -50,10 +55,19 @@ body{
 .taskElem{
     background-color: white;
     margin: 5px;
-    width: 498px;
-    height: 30px;
+    width: 480px;
+    height: 35px;
     font-size: 30px;
     display: flex;
     justify-content:space-between;
     align-items: center;
+    font-family: 'Birthstone', cursive;
+    letter-spacing: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.time{
+    font-size: 19px;
+    font-family: 'Birthstone', cursive;
 }
